{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 417,
  "lineage": "f36668d3-dd21-5dc4-c4d7-7f2e057a67b8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_appserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a929b66ed6e0de6",
            "arn": "arn:aws:ec2:us-east-1:434698871824:instance/i-00425e0fb2ea5a578",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00425e0fb2ea5a578",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jomo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e670e5474e6df6de",
            "private_dns": "ip-12-0-1-89.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "12.0.1.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02f7cca5746ff17af",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03db606158ce1749f",
            "tags": {
              "Name": "terraform-appserver"
            },
            "tags_all": {
              "Name": "terraform-appserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-055aa980a93c8d7ba"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform_sg",
            "aws_subnet.terraform_private_subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a929b66ed6e0de6",
            "arn": "arn:aws:ec2:us-east-1:434698871824:instance/i-0ff332edcd525e6d5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3-access",
            "id": "i-0ff332edcd525e6d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jomo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a114b063dc0883a5",
            "private_dns": "ip-12-0-0-47.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "12.0.0.47",
            "public_ip": "44.198.178.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06f9524607b047f0a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d9115afded4af58",
            "tags": {
              "Name": "terraform-webserver"
            },
            "tags_all": {
              "Name": "terraform-webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-055aa980a93c8d7ba"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform_sg",
            "aws_subnet.terraform_public_subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434698871824:internet-gateway/igw-0adebb5bc144cd838",
            "id": "igw-0adebb5bc144cd838",
            "owner_id": "434698871824",
            "tags": {
              "Name": "terraform-igw"
            },
            "tags_all": {
              "Name": "terraform-igw"
            },
            "vpc_id": "vpc-06ba1584e4a0036cf"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "terraform_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434698871824:network-acl/acl-0683c2a4a3b46ec9b",
            "egress": [],
            "id": "acl-0683c2a4a3b46ec9b",
            "ingress": [],
            "owner_id": "434698871824",
            "subnet_ids": [],
            "tags": {
              "Name": "terraform-nacl"
            },
            "tags_all": {
              "Name": "terraform-nacl"
            },
            "vpc_id": "vpc-06ba1584e4a0036cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0b39057231b1efc25",
            "network_acl_id": "acl-0683c2a4a3b46ec9b",
            "subnet_id": "subnet-07d9115afded4af58"
          },
          "dependencies": [
            "aws_network_acl.terraform_nacl",
            "aws_subnet.terraform_public_subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2528161175",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0683c2a4a3b46ec9b",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.terraform_nacl",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4142667996",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0683c2a4a3b46ec9b",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.terraform_nacl",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1260811282",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0683c2a4a3b46ec9b",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.terraform_nacl",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-729465177",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0683c2a4a3b46ec9b",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.terraform_nacl",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outbound_ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1384023915",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0683c2a4a3b46ec9b",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.terraform_nacl",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3192199668",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0683c2a4a3b46ec9b",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.terraform_nacl",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3386624772",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0683c2a4a3b46ec9b",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.terraform_nacl",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-635458971",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0683c2a4a3b46ec9b",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.terraform_nacl",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434698871824:route-table/rtb-03f131234d98850d7",
            "id": "rtb-03f131234d98850d7",
            "owner_id": "434698871824",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-private-rt"
            },
            "tags_all": {
              "Name": "terraform-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ba1584e4a0036cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434698871824:route-table/rtb-0b5793c55a40687c5",
            "id": "rtb-0b5793c55a40687c5",
            "owner_id": "434698871824",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0adebb5bc144cd838",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-public-rt"
            },
            "tags_all": {
              "Name": "terraform-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ba1584e4a0036cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_igw",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053af5ba5df097db2",
            "route_table_id": "rtb-03f131234d98850d7",
            "subnet_id": "subnet-03db606158ce1749f"
          },
          "dependencies": [
            "aws_route_table.terraform_private_rt",
            "aws_subnet.terraform_private_subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037713024aab85c98",
            "route_table_id": "rtb-0b5793c55a40687c5",
            "subnet_id": "subnet-07d9115afded4af58"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_igw",
            "aws_route_table.terraform_public_rt",
            "aws_subnet.terraform_public_subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434698871824:security-group/sg-055aa980a93c8d7ba",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-055aa980a93c8d7ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform_sg",
            "name_prefix": "",
            "owner_id": "434698871824",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-sg"
            },
            "tags_all": {
              "Name": "terraform-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ba1584e4a0036cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434698871824:subnet/subnet-03db606158ce1749f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "12.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03db606158ce1749f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "434698871824",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-private-subnet"
            },
            "tags_all": {
              "Name": "terraform-private-subnet"
            },
            "vpc_id": "vpc-06ba1584e4a0036cf"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434698871824:subnet/subnet-07d9115afded4af58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "12.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d9115afded4af58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "434698871824",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-public-subnet"
            },
            "tags_all": {
              "Name": "terraform-public-subnet"
            },
            "vpc_id": "vpc-06ba1584e4a0036cf"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434698871824:vpc/vpc-06ba1584e4a0036cf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "12.0.0.0/23",
            "default_network_acl_id": "acl-06ed8943d84750d2c",
            "default_route_table_id": "rtb-066d3a18c5b6378b1",
            "default_security_group_id": "sg-047457d590b2caf81",
            "dhcp_options_id": "dopt-0486052ca02411cfe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ba1584e4a0036cf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-066d3a18c5b6378b1",
            "owner_id": "434698871824",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434698871824:vpc-endpoint/vpce-0fe4bf3ea9452832c",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-0fe4bf3ea9452832c",
            "owner_id": "434698871824",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-03f131234d98850d7"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "gateway-s3-access"
            },
            "tags_all": {
              "Name": "gateway-s3-access"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-06ba1584e4a0036cf"
          },
          "dependencies": [
            "aws_route_table.terraform_private_rt",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    }
  ]
}